--- a/_sass/_01_settings_colors.scss
+++ b/_sass/_01_settings_colors.scss
@@ -26,12 +26,12 @@ $body-bg: 			#fdfdfd;
    https://color.adobe.com/de/Flat-Design-Colors-v2-color-theme-4341903/
 ------------------------------------------------------------------- */
 
-$ci-1: #334D5C;		// dark turquoise
-$ci-2: #45B29D;		// turquoise
-$ci-3: #EFC94C;		// yellow
-$ci-4: #E27A3F;		// orange
-$ci-5: #DF4949;		// red
-$ci-6: #A1D044;     // green
+$ci-1: #0E1A5E;		// dark turquoise
+$ci-2: #99A7F7;		// turquoise
+$ci-3: #213EDE;		// yellow
+$ci-4: #3D425E;		// orange
+$ci-5: #1A2FAB;		// red
+$ci-6: #4B4E61;     // green
 
 
 
