new header and logo

--- a/_sass/_01_settings_colors.scss
+++ b/_sass/_01_settings_colors.scss
@@ -28,10 +28,10 @@ $body-bg: 			#fdfdfd;
 
 $ci-1: #0E1A5E;		// dark turquoise
 $ci-2: #99A7F7;		// turquoise
-$ci-3: #213EDE;		// yellow
+$ci-3: #4B4E61;		// yellow
 $ci-4: #3D425E;		// orange
 $ci-5: #1A2FAB;		// red
-$ci-6: #4B4E61;     // green
+$ci-6: #213EDE;     // green
 
 
 
