--- a/_sass/_01_settings_colors.scss
+++ b/_sass/_01_settings_colors.scss
@@ -26,12 +26,23 @@ $body-bg: 			#fdfdfd;
    https://color.adobe.com/de/Flat-Design-Colors-v2-color-theme-4341903/
 ------------------------------------------------------------------- */
 
-$ci-1: #0E1A5E;		// dark turquoise
-$ci-2: #99A7F7;		// turquoise
-$ci-3: #4B4E61;		// yellow
-$ci-4: #3D425E;		// orange
-$ci-5: #1A2FAB;		// red
-$ci-6: #213EDE;     // green
+
+$alice-blue: #edf2fbff;
+$lavender-web: #e2eafcff;
+$lavender-web-2: #d7e3fcff;
+$periwinkle-crayola: #ccdbfdff;
+$lavender-blue: #c1d3feff;
+$lavender-blue-2: #b6ccfeff;
+$baby-blue-eyes: #abc4ffff;
+
+
+$ci-1: #edf2fbff;		// dark turquoise
+$ci-2: #e2eafcff;		// turquoise
+$ci-3: #d7e3fcff;		// yellow
+$ci-4: #ccdbfdff;		// orange
+$ci-5: #c1d3feff;		// red
+$ci-6: #b6ccfeff;     // green
+$ci-7: #abc4ffff;
 
 
 
