--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -13,18 +13,18 @@
 
             <p class="shadow-black">
               {{ site.description }}
-              <a href="{{ site.url }}{{ site.baseurl }}/info/">{{ site.data.language.more }}</a>
+              <a href="{{ site.url }}{{ site.baseurl }}">{{ site.data.language.more }}</a>
             </p>
           </div><!-- /.large-6.columns -->
 
-
+          <!--
           <div class="small-6 medium-3 large-3 large-offset-1 columns">
             {% for service_item in site.data.services %}
               {% if forloop.first == true %}
                 <h5 class="shadow-black">{{ service_item.menu_name }}</h5>
               {% endif %}
             {% endfor %}
-
+    
               <ul class="no-bullet shadow-black">
               {% for service_item in site.data.services %}
                 {% if service_item.url contains 'http' %}{% assign domain = '' %}{% else %}{% capture domain %}{{ site.url }}{{ site.baseurl }}{% endcapture %}{% endif %}
@@ -33,10 +33,10 @@
                   </li>
               {% endfor %}
               </ul>
-          </div><!-- /.large-4.columns -->
+          </div>--><!-- /.large-4.columns -->
 
 
-          <div class="small-6 medium-3 large-3 columns">
+          <div class="small-12 medium-6 large-6 columns">
             {% for network_item in site.data.network %}
               {% if forloop.first == true %}
                 <h5 class="shadow-black">{{ network_item.menu_name }}</h5>
@@ -47,7 +47,11 @@
             {% for network_item in site.data.network %}
               {% if network_item.url contains 'http' %}{% assign domain = '' %}{% else %}{% capture domain %}{{ site.url }}{{ site.baseurl }}{% endcapture %}{% endif %}
                 <li {% if network_item.class %}class="{{ network_item.class }}" {% endif %}>
+                  {% if network_item.url contains 'http' %}
                   <a href="{{ domain }}{{ network_item.url }}" {% if network_item.url contains 'http' %}target="_blank" {% endif %} title="{{ network_item.title }}">{{ network_item.name }}</a>
+                  {%else%}
+                  {{ network_item.name }}
+                  {%endif%}
                 </li>
             {% endfor %}
             </ul>
